# rust-soccer-betting-platform

./: README.md
.github/workflows/: rust.yml
apps/solana-web/: .env.example  README.md  package-lock.json  package.json
apps/solana-web/app/: globals.css  layout.tsx  page.tsx
apps/solana-web/lib/: format.ts  history.ts
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  page.tsx
deployment/: README.md
solana/: Anchor.toml  Cargo.toml  README.md
solana/programs/soccer-betting-anchor/: Cargo.toml
solana/programs/soccer-betting-anchor/src/: lib.rs
